# Assay

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  action.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
deploy/: .env.example  Dockerfile  assay.container.toml  docker-compose.yml  nginx.conf
docs/archive/: README.md
docs/canonical/: data_contracts.md  landscape.md
docs/runtime/: docs_manifest.yaml
docs/working/: backlog.md  change_proposals.md  current_focus.md  current_task.md  deploy_guide.md  grain_assay_handshake.md  project_state.md  roadmap.md  tooling_notes.md  workflow_metrics.md
runner/: Dockerfile  run.js
scripts/: form-submit.json  login-flow.json  page-smoke.json
src/assay/: __init__.py  config.py  telemetry.py
src/assay/api/: __init__.py  (+2 more)
tasks/P14-T02-TASK-0033/: results.md  task.md
tasks/P15-T01-TASK-0034/: results.md  task.md
tasks/P16-T03-TASK-0038/: context.md  deliverable_spec.md  results.md
tasks/P16-T04-TASK-0039/: deliverable_spec.md  plan.md
tests/: test_admin_auth.py  test_agent_cli.py  test_assertion_steps.py  test_auth_middleware.py  test_auto_task_check.py  test_auto_task_dedup.py  test_auto_task_regression.py  test_auto_task_remediation.py  test_baseline.py  test_baseline_http.py  test_check_command.py  test_checks_dashboard.py  test_ci_config.py  test_cli.py  test_code_review_verdict.py  test_compare_flag.py  test_contracts.py  test_dashboard.py  test_dashboard_api.py  test_diff_engine.py  test_diff_ingest.py  test_diff_view.py  test_grain_config.py  test_grain_integration.py  test_header_check.py  test_html_formatter.py  test_http_check.py  test_keys_ui.py  test_login.py  test_mcp.py  test_packet_detail.py  test_report_command.py  test_report_export.py  test_report_open.py  test_report_sqlite.py  test_review.py  test_review_bridge.py  test_review_config.py  test_review_runner.py  test_runner_direct.py  (+13 more)
(+160 files in other folders)
