[project]
name = "assay-kit"
version = "0.3.3"
description = "Independent verification layer for software projects"
readme = "README.md"
license = "AGPL-3.0-only"
authors = [{ name = "Shaznay Sison" }]
keywords = ["testing", "verification", "playwright", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10",
    "bcrypt>=4.1",
    "pillow>=10.0",
    "fastapi>=0.111",
    "jsonschema>=4.23",
    "PyJWT>=2.8",
    "python-multipart>=0.0.9",
    # Shared-auth lib `warden` is vendored at src/assay/_vendor/warden (it is not
    # published to PyPI); it needs starlette directly. PyJWT>=2.8 above also covers it.
    "starlette>=0.36",
    "typer>=0.12",
    "uvicorn>=0.29",
]

[project.scripts]
assay = "assay.cli.main:app"

[project.optional-dependencies]
review = ["anthropic>=0.40"]
dev = [
    "anyio[trio]>=4.0",
    "httpx>=0.27",
    "jsonschema>=4.23",
    "mypy",
    "pytest",
    "ruff",
    "typer>=0.12",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
assay = [
    "runner/runner_script.js",
    "ingest/static/dashboard/.gitkeep",
    "ingest/static/dashboard/*",
    "ingest/static/dashboard/**/*",
]

[tool.ruff]
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true
packages = ["assay"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.scripts]
test = "pytest"
lint = "ruff check ."
